WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
113170
WTF::binarySearchImpl() should compile with -Wshorten-64-to-32
https://bugs.webkit.org/show_bug.cgi?id=113170
Summary
WTF::binarySearchImpl() should compile with -Wshorten-64-to-32
David Kilzer (:ddkilzer)
Reported
2013-03-24 21:05:48 PDT
/usr/local/include/wtf/StdLibExtras.h:190:30: error: implicit conversion loses integer precision: 'unsigned long' to 'int' [-Werror,-Wshorten-64-to-32] int pos = (size - 1) >> 1; ~~~ ~~~~~~~~~~~^~~~ 1 error generated.
Attachments
Patch v1
(1.56 KB, patch)
2013-03-24 21:10 PDT
,
David Kilzer (:ddkilzer)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
David Kilzer (:ddkilzer)
Comment 1
2013-03-24 21:10:36 PDT
Created
attachment 194787
[details]
Patch v1
WebKit Review Bot
Comment 2
2013-03-25 08:27:52 PDT
Comment on
attachment 194787
[details]
Patch v1 Clearing flags on attachment: 194787 Committed
r146774
: <
http://trac.webkit.org/changeset/146774
>
WebKit Review Bot
Comment 3
2013-03-25 08:27:55 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug