WTF::binarySearchImpl() should compile with -Wshorten-64-to-32 <http://webkit.org/b/113170>

Reviewed by Dan Bernstein.

Fixes the following build failure:

    /usr/local/include/wtf/StdLibExtras.h:190:30: error: implicit conversion loses integer precision: 'unsigned long' to 'int' [-Werror,-Wshorten-64-to-32]
            int pos = (size - 1) >> 1;
                ~~~   ~~~~~~~~~~~^~~~
    1 error generated.

* wtf/StdLibExtras.h:
(WTF::binarySearchImpl): Switch type from int to size_t.


Canonical link: https://commits.webkit.org/131538@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@146774 268f45cc-cd09-0410-ab3c-d52691b4dbfc